package optionSelector;

public interface IAction {
    void onSelected();
}
